# code-monkey

./: .gitignore  constants.ts  dijkstra.py  mdx-components.tsx  package-lock.json  package.json  readme.md  tsconfig.json
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/interview-guide/: layout.tsx  page.tsx
backend/: .gitignore  Dockerfile  build.sh  db.sqlite3  pyproject.toml  requirements.txt
backend/backend/: constants.py  settings.py  urls.py
backend/groups/: admin.py  models.py  serializers.py  urls.py  views.py
backend/groups/migrations/: 0001_initial.py  0002_group_member_count.py  0003_group_created_by.py
backend/languages/: models.py  serializers.py  urls.py  views.py
backend/languages/management/commands/: insert_init_languages.py
backend/languages/migrations/: 0001_initial.py
backend/questions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/questions/management/commands/: change_all_mq_time.py  number_questions.py
backend/questions/migrations/: 0001_initial.py  0002_initial.py  0003_alter_markquestion_difficulty.py  0003_question_questions_q_posted__613542_idx.py  0004_alter_markquestion_difficulty.py  0004_question_group.py  0005_alter_question_group.py  0006_rename_group_question_group_id.py  0007_markquestion_done_time.py  0008_question_like.py  0009_likequestion.py  0010_question_number.py  0011_rename_like_question_likes.py
backend/solutions/: models.py  serializers.py  urls.py  views.py
backend/solutions/migrations/: 0001_initial.py  0002_initial.py  0003_solution_notes.py  0004_solution_sc_solution_tc.py  0005_solution_solutions_s_q_id_id_b9f125_idx.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
code-monkey/: contentlayer.config.ts  mdx-components.tsx  menu  next.config.ts  package-lock.json  package.json  tailwind.config.ts
code-monkey/app/: ClientLoader.tsx  fonts.ts  globals.css  layout.tsx  page.tsx
code-monkey/components/: AuthButton.tsx  FreqLabel.tsx  auth-button.tsx  buttons.tsx  freq-label.tsx  navbar.tsx
code-monkey/lib/: auth.ts
code-monkey/posts/: Getting Started.mdx  Python Coding Interview Cheat Sheet.mdx  python-coding-interview-cheat-sheat.mdx  yo.mdx
components/: auth-button.tsx  freq-label.tsx  navbar.tsx
components/mdx/: author.tsx  (+3 more)
frontend/: .env  package-lock.json  package.json  tailwind.config.js
frontend_new/: package-lock.json
lib/: comparePathWithSlug.ts
(+130 files in other folders)
