[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend of grind hub"
authors = ["chi-wei-lien <wilsonwilson3124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1.2"
djangorestframework = "3.15.1"
djangorestframework-simplejwt = "5.3.1"
rest-framework-simplejwt = "0.0.2"
gunicorn = "20.1.0"
django-cors-headers = "4.4.0"
whitenoise = "^6.8.2"
dj-database-url = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
